fixed page width increase on mobile

--- a/assets/styles/global.css
+++ b/assets/styles/global.css
@@ -6,7 +6,7 @@ body, html {
 }
 
 .container {
-    max-width: min(100%, 800px);
+    max-width: 800px;
     background-color: white;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     padding: 20px;
@@ -65,7 +65,9 @@ nav li a {
 }
 
 .horizontal-scroll {
-    max-width: min(100%, 800px);
+    max-width: 800px;
+    min-width: calc(100% - 32px);
+    width: 0;
     overflow-x: auto;
     white-space: nowrap;
 }
